# specimen-app

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  config.py  crawl_specimen_lists.py  crawl_specimens.py  docker-compose.yml  load_initial_fixtures.py  main.py  pyproject.toml  requirements.txt
db/: main.py  models.py
example_html/: 2142540.html  2142600.html  2142607.html  2142650.html  2142656.html  2142674.html  2142727.html  2142751.html  2142776.html  2142902.html  2142981.html  2142998.html  2143115.html  2143798.html  2144106.html  2144447.html  2144853.html  2144884.html  2144886.html  2144906.html  2144907.html  2144940.html  2145078.html  2145170.html  2145239.html  2145285.html  2145525.html  2145675.html  2146067.html  2146099.html  2146173.html  2146218.html  2146264.html  2146283.html  2146287.html  2146291.html  2146308.html  2146309.html  2146392.html  2146483.html  (+32 more)
example_page/: page-1.json  page-2.json  page-3.json
specimen/: crawl_utils.py  dal.py  routes.py  schemas.py  utils.py
